src/objects/Price_File_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Based_On_Value__c</fullName>
        <label>Cost Based On Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Markup_Tier_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Markup Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Markup_Tier_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Markup Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Markup_Tier_3__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Markup Tier 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Forced_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Forced Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Max_Markup_Amount_Tier_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Max Markup Amount Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Max_Markup_Amount_Tier_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Max Markup Amount Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_MSRP_Rounded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MSRP Rounded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Packaged_Part__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Packaged Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Retail_Rounded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retail Rounded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_File_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MSRP_Based_On_Value__c</fullName>
        <label>MSRP Based On Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP_Markup_Tier_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>MSRP Markup Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSRP_Markup_Tier_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>MSRP Markup Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSRP_Markup_Tier_3__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>MSRP Markup Tier 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSRP_Max_Markup_Amount_Tier_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>MSRP Max Markup Amount Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP_Max_Markup_Amount_Tier_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>MSRP Max Markup Amount Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP_Round_To__c</fullName>
        <label>MSRP Round To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Based_On_Value__c</fullName>
        <label>Retail Based On Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Markup_Tier_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Retail Markup Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Markup_Tier_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Retail Markup Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Markup_Tier_3__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Retail Markup Tier 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Max_Markup_Amount_Tier_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Retail Max Markup Amount Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Max_Markup_Amount_Tier_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Retail Max Markup Amount Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Round_To__c</fullName>
        <label>Retail Round To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Master__c</fullName>
        <label>Vendor Master</label>
        <referenceTo>Vendor_Master__c</referenceTo>
        <relationshipLabel>Price File Mappings</relationshipLabel>
        <relationshipName>Price_File_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Price File Mapping</label>
    <nameField>
        <displayFormat>PFM-{000000}</displayFormat>
        <label>Price File Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price File Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>